# odmantic

./: .codecov.yml  .coveragerc  .darglint  .env  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .pydocstyle  .testmondata  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  TODO  Taskfile.yml  coverage.ini  dependabot.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: Taskfile.yml  dependabot.yml  latest-changes.jinja2  release.py
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  feature_request.md
.github/actions/mongo-service/: README.md  Taskfile.yml  action.yml
.github/workflows/: ci.yml  codspeed.yml  docs-preview.yml  docs.yml  latest-changes.yml  release.yml
api_reference/: index.html
api_reference/bson/: index.html
api_reference/config/: index.html
api_reference/engine/: index.html
api_reference/exceptions/: index.html
api_reference/fastapi/: index.html
api_reference/field/: index.html
api_reference/model/: index.html
api_reference/query/: index.html
api_reference/reference/: index.html
api_reference/session/: index.html
changelog/: index.html
contributing/: index.html
css/: extra.css
docs/: contributing.md  engine.md  fields.md  filtering.md  hate.md  index.md  main.py  migration_guide.md  mkdocs.yml  modeling.md  outside_odm.md  querying.md  quickstart.md  raw_query_usage.md  sitemap.xml  types.md  usage_fastapi.md  usage_pydantic.md
docs/api_reference/: bson.md  config.md  engine.md  exceptions.md  fastapi.md  field.md  index.md  model.md  query.md  reference.md  session.md
docs/css/: extra.css
docs/examples_src/: conftest.py  test_examples.py
docs/examples_src/engine/: count.py  create_with_session.py  create_with_transaction.py  delete_many.py  fetch_async_for.py  fetch_await.py  fetch_find_one.py  patch_multiple_fields_dict.py  patch_multiple_fields_pydantic.py  primary_key_update.py  remove_just_one.py  update.py
docs/examples_src/fields/: __init__.py  container_dict.py  custom_field_validators.py  enum.py  inconsistent_enum_1.py  objectid.py  union.py  validation_field_descriptor.py  validation_strict_types.py
docs/examples_src/filtering/: and.py  nor.py
docs/examples_src/modeling/: 03.py  compound_index.py  compound_index_sort_order.py  custom_text_index.py  custom_validators.py  many_to_many.py  many_to_many_1.py  one_to_one.py
docs/examples_src/querying/: asc.py  desc.py  gt_e.py  lt_e.py  match.py  nor.py  not_equal.py
docs/examples_src/raw_query_usage/: collection_name.py  create_from_raw.py  extract_from_existing.py  extract_from_raw.py  motor_collection.py  parse_with_unset_default.py  parse_with_unset_default_factory.py  parse_with_unset_default_factory_enabled.py  pymongo_collection.py  raw_query_filters_1.py
docs/examples_src/usage_fastapi/: base_example.py  example_delete.py  example_update.py
docs/img/: internals.excalidraw
docs/js/: gitter.js
engine/: index.html
examples_src/engine/: count.py  create.py  engine_creation.py  fetch_async_for.py  fetch_await.py  fetch_find_one.py  patch_multiple_fields_dict.py
examples_src/fields/: 03.py  container_list.py  container_tuple.py  custom_bson_serialization.py  custom_field_validators.py  custom_primary_field.py  default_value.py  default_value_field.py  enum.py  inconsistent_enum_2.py  objectid.py  optional.py  union.py  validation_strict_types.py
examples_src/filtering/: embedded.py  enum.py  nor.py
examples_src/modeling/: 01_1.py  02.py  03.py  04.py  compound_index.py  custom_validators.py
examples_src/querying/: embedded_sort.py  equal.py  in.py  multiple_sort.py  or.py
examples_src/raw_query_usage/: aggregation_example.py  field_key_name.py  parse_with_unset_default.py  parse_with_unset_default_factory.py  parse_with_unset_default_factory_enabled.py  raw_query_filters.py
examples_src/usage_fastapi/: example_update.py  model_response.py
examples_src/usage_pydantic/: custom_encoders.py
fields/: index.html
filtering/: index.html
hate/: index.html
img/: internals.excalidraw
migration_guide/: index.html
modeling/: index.html
mongodb-cluster/: Taskfile.yml  run.sh
mongodb-cluster/replica/: compose.yml  init.js  start.sh
mongodb-cluster/sharded/: compose.yml  init-router.js  init-shard0.js  init-shard1.js  init-shard2.js  start.sh
odmantic/: __init__.py  bson.py  bson_fields.py  config.py  engine.py  exceptions.py  fastapi.py  field.py  fields.py  index.py  model.py  operators.py  query.py  reference.py  session.py  types.py  typing.py  updater.py  utils.py
odmantic/tools/: fastapi.py  typing.py
outside_odm/: index.html
querying/: index.html
quickstart/: index.html
raw_query_usage/: index.html
scripts/: coverage.sh  format.sh  lint.sh  setup.sh  test.sh
search/: search_index.json
src/odmantic/: __init__.py  engine.py  fields.py  model.py  session.py  types.py
tests/: test_fastapi.py  test_model.py  test_session.py  test_typing_utils.py  typing_utils.py
tests/fastapi/: conftest.py  test_dependency.py  test_models.py
tests/integration/: conftest.py  test_atomic_update.py  test_embedded_model.py  test_engine.py  test_engine_reference.py  test_index.py  test_query.py  test_session.py  test_types.py  test_zoo.py  utils.py
tests/unit/: test_bson_fields.py  test_config.py  test_deprecations.py  test_document_serialization.py  test_field.py  test_index_definition.py  test_json_serialization.py  test_model.py  test_model_definition.py  test_model_inheritance.py  test_model_logic.py  test_model_type_validation.py  test_query.py  test_reference.py  test_session.py  test_types.py  test_typing.py
tests/zoo/: book.py  book_embedded.py  deeply_nested.py  full_bson.py  patron_embedded.py  person.py  pigment.py  player.py  student.py  tree.py  twitter_user.py
types/: index.html
usage_fastapi/: index.html
usage_pydantic/: index.html
(+56 files in other folders)
