[project]
name = "odmantic"
version = "0.9.0"
description = "ODMantic, an AsyncIO MongoDB Object Document Mapper for Python using type hints "
authors = [{ name = "Arthur Pastel", email = "arthur.pastel@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["mongodb", "asyncio", "types", "pydantic", "motor"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Environment :: Web Environment",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]

requires-python = ">=3.7"
dependencies = [
    "pydantic >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1",
    "importlib-metadata >=1,<5; python_version<'3.8'",
    "typing-extensions >= 4.2.0; python_version<'3.11'",
    "motor >=2.1.0,<3.1.0",
    "pymongo >=3.11.0,<5.0.0",
]
[project.optional-dependencies]
fastapi = ["fastapi >=0.61.1"]
test = [
    "black ~= 22.3.0",
    "isort ~=5.8.0",
    "flake8 ~= 4.0.1",
    "mypy ~= 0.961",
    "pytest ~= 7.0",
    "pytest-xdist ~= 2.1.0",
    "pytest-asyncio ~= 0.16.0",
    # "pytest-testmon ~= 1.3.1",
    "pytest-sugar ~= 0.9.5",
    "async-asgi-testclient ~= 1.4.4",
    "asyncmock ~= 0.4.2",
    "coverage[toml] ~= 6.2",
    "pytz ~= 2022.1",
    "darglint ~= 1.8.1",
    "uvicorn ~= 0.17.0",
    "fastapi >=0.61.1,<0.69.0",
    "requests ~= 2.24.0",
    "typer ~= 0.4.1",
    "semver ~= 2.13.0",
    "types-pytz ~= 2022.1.1",
]
doc = [
    "pydocstyle ~= 6.0.0",
    "mkdocs-material ~= 8.4.0",
    "mkdocstrings[python] ~= 0.19.0",
    "mkdocs-macros-plugin ~= 0.5.0",
]
dev = ["ipython ~= 7.16.1"]

[project.urls]
Documentation = "https://art049.github.io/odmantic"
Source = "https://github.com/art049/odmantic"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0
float_to_top = true
known_first_party = ["odmantic", "tests"]
skip = ["docs"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:\"@coroutine\" decorator is deprecated.*:DeprecationWarning:motor.*",
    "ignore:the AIOEngineDependency object is deprecated.*:DeprecationWarning:odmantic.*",
]
pythonpath = "src tests"
[tool.coverage.run]
branch = true
[tool.coverage.report]
include = ["odmantic/*", "tests/*"]
omit = ["**/conftest.py"]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@pytest.mark.skip",
    "@abstractmethod",
]
